<resources>
    <string name="app_name">Knitting Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="myprojects">My Projects</string>
    <string name="projects">Projects</string>
    <string name="find">Find...</string>
    <string name="yarn">My Stash</string>
    <string name="counters">My Counters</string>
    <string name="patterns">Pattern Search</string>
    <string name="yarns">Yarn Search</string>
    <string name="shops">Local Yarn Shops</string>
    <string name="view">View</string>
    <string name="newProject">New Project</string>
    <string name="dateFormat">%1$02d/%2$02d/%3$02d</string>
    <string name="project">Project</string>
    <string name="startDate">Start: mm/dd/yyy</string>
    <string name="endDate">End: mm/dd/yyy</string>
    <string name="patternName">Pattern name...</string>
    <string name="projectName">Project name...</string>
    <string name="yarnName">Yarn name...</string>
    <string name="colorWayName">Colorway...</string>
    <string name="notesName">Note...</string>
    <string name="yarnLabel">Yarn</string>
    <string name="noteLabel">Notes</string>
    <string name="totalYardLabel">Total Yards:</string>
    <string name="yardUsedLabel">Yards Used:</string>
    <string name="skeinsLabel">Skeins:</string>
    <string name="sizeLabel">Size:</string>
    <string name="done">Done</string>
    <string name="addCounter">Add Counter</string>
    <string name="counter">Counter Name</string>
    <string name="counterHint">Counter name...</string>
    <string name="edit">Edit</string>
    <string name="addYarn">Add Yarn</string>

    <string name="projectNameLabel">Project Name:</string>
    <string name="patternNameLabel">Pattern Name:</string>
    <string name="startLabel">Start Date:</string>
    <string name="endLabel">End Date:</string>
    <string name="yarnNameLabel">Yarn Name:</string>
    <string name="colorWayLabel">Colorway:</string>
    <string name="weightLabel">Yarn Weight:</string>
    <string name="clear">Clear</string>
    <string name="fiberLabel">Fiber Content:</string>

    <string name="API_username">API username</string>
    <string name="API_password">API password</string>

    <string-array name="yarn_weights_array">
        <item>Thread</item>
        <item>Cobweb</item>
        <item>Lace</item>
        <item>Light Fingering</item>
        <item>Fingering</item>
        <item>Sport</item>
        <item>DK</item>
        <item>Worsted</item>
        <item>Aran</item>
        <item>Bulky</item>
        <item>Super Bulky</item>
        <item>Jumbo</item>
    </string-array>

    <string-array name="meters_yards_array">
        <item>Yards</item>
        <item>Meters</item>
    </string-array>

    <string name="yardage">Yardage:</string>
    <string name="yardageHint">Yardage to search...</string>
    <string name="search">Search</string>
    <string name="priority">Prioritize free and popular projects?</string>
    <string name="API_KEY">API KEY HERE</string>
    <string name="needleSizeLabel">Size:</string>
    <string name="needleTypeLabel">Type:</string>
    <string name="needleLengthLabel">Length:</string>
    <string name="needleLabel">Needle</string>
    <string name="sizeHint">Project size...</string>
    <string name="weightHint">Yarn weight...</string>
    <string name="yardHint">Yardage used...</string>
    <string name="fiberHint">Fiber content...</string>
    <string name="needleSizeHint">Needle size...</string>
    <string name="needleTypeHint">Needle type...</string>
    <string name="needleLengthHint">Needle length...</string>
    <string name="totalYards">Total yards per skein...</string>'
    <string name="skeinsHint">Skeins owned...</string>
</resources>
