<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="@string/projects">
        <menu>
            <item
                android:id="@+id/projects"
                android:icon="@drawable/projecticon"
                android:title="@string/myprojects" />
            <item
                android:id="@+id/counters"
                android:icon="@drawable/counter"
                android:title="@string/counters" />
            <item
                android:id="@+id/yarn"
                android:icon="@drawable/yarn"
                android:title="@string/yarn" />
        </menu>
    </item>

    <item android:title="@string/find">
        <menu>
            <item
                android:id="@+id/patterns"
                android:icon="@drawable/pattern"
                android:title="@string/patterns" />
            <item
                android:id="@+id/shops"
                android:icon="@drawable/shop"
                android:title="@string/shops" />
        </menu>
    </item>

</menu>
